// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification custom theme 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #EB0000;
  stroke: #EB0000;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: red;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding: 24px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is critical"
            class="c4"
            viewBox="0 0 12 12"
          >
            <path
              d="M6.712 1.263a1.005 1.005 0 0 0-1.424 0L1.263 5.288a1.005 1.005 0 0 0 0 1.424l4.025 4.025a1.005 1.005 0 0 0 1.424 0l4.025-4.025a1.005 1.005 0 0 0 0-1.424L6.712 1.263z"
              fill-rule="evenodd"
              stroke="#000"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            <span
              class="c7"
            >
              title
            </span>
             
            <span
              class="c8"
            >
              <span
                class="c9"
              >
                message
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #EB0000;
  stroke: #EB0000;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background: red;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: none;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is critical"
            class="c4"
            viewBox="0 0 12 12"
          >
            <path
              d="M6.712 1.263a1.005 1.005 0 0 0-1.424 0L1.263 5.288a1.005 1.005 0 0 0 0 1.424l4.025 4.025a1.005 1.005 0 0 0 1.424 0l4.025-4.025a1.005 1.005 0 0 0 0-1.424L6.712 1.263z"
              fill-rule="evenodd"
              stroke="#000"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            title
          </span>
          <p
            class="c7"
          >
            <span
              class="c8"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification global 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 0px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is unknown"
            class="c4"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            <span
              class="c7"
            >
              title
            </span>
             
            <span
              class="c8"
            >
              <span
                class="c9"
              >
                message
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification multi actions 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  box-sizing: border-box;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  text-decoration: none;
  cursor: pointer;
  margin-right: 6px;
}

.c9:hover {
  text-decoration: underline;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

.c10 {
  white-space: nowrap;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is unknown"
            class="c4"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            title
          </span>
          <p
            class="c7"
          >
            <span
              class="c8"
            >
              message
            </span>
            <a
              class="c9 c10"
              href="/some-link"
            >
              Renew Subscription
            </a>
             
            <a
              class="c9 c10"
              href="/link"
            >
              View More
            </a>
             
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification position bottom 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  bottom: 24px;
  left: 50%;
  transform: translate(-50%,0);
  animation: fdqiZe 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position bottom 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position bottom-left 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  bottom: 24px;
  left: 24px;
  transform: translateY(0);
  animation: cQwfQi 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position bottom-left 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position bottom-right 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  bottom: 24px;
  right: 24px;
  transform: translateY(0);
  animation: cQwfQi 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position bottom-right 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position center 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  animation: hWAzxx 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position center 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position end 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  inset-inline-end: 24px;
  top: 50%;
  transform: translate(0,-50%);
  animation: drjPPC 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position end 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position left 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  left: 24px;
  top: 50%;
  transform: translate(0,-50%);
  animation: kPYden 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position left 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position right 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  right: 24px;
  top: 50%;
  transform: translate(0,-50%);
  animation: drjPPC 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position right 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position start 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  inset-inline-start: 24px;
  top: 50%;
  transform: translate(0,-50%);
  animation: kPYden 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position start 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position top 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  top: 24px;
  left: 50%;
  transform: translate(-50%,0);
  animation: hnDkLj 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position top 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position top-left 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  top: 24px;
  left: 24px;
  transform: translateY(0);
  animation: ffftsv 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position top-left 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification position top-right 1`] = `
.c5 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c5 *[stroke*='#'],
.c5 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*='#'],
.c5 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #FFFFFF;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  width: 384px;
  border-radius: 6px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 20;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  display: flex;
  flex-direction: column;
  min-height: 48px;
  outline: none;
  pointer-events: all;
  z-index: 20;
  position: fixed;
  max-height: calc(100% - 24px - 24px);
  max-width: calc(100% - 24px - 24px);
  border-radius: 0;
  top: 24px;
  right: 24px;
  transform: translateY(0);
  animation: ffftsv 0.2s ease-in-out forwards;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding-right: 6px;
  }
}

<div
  class="c0"
  id="position-test"
  tabindex="-1"
>
  <div
    class="c1"
    data-g-portal-id="0"
    id="position-test"
    role="log"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <svg
            aria-label="Status is unknown"
            class="c5"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c6"
        >
          <span
            class="c7"
          >
            title
          </span>
          <p
            class="c8"
          >
            <span
              class="c9"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification position top-right 2`] = `
"@media only screen and (max-width: 768px) {
  .kOLorc {
    border-radius: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-left: 6px;
    padding-right: 6px;
  }
}
@media only screen and (max-width: 768px) {
  .bjoTbD {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}
@media only screen and (max-width: 768px) {
  .ijwodN {
    padding-right: 6px;
  }
}"
`;

exports[`Notification should have no accessibility violations 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is unknown"
            class="c4"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            title
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification should have no accessibility violations for toast 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`Notification should render custom icon 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Home"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="m1 11 11-9 11 9m-8 12v-8H9v8m-5 0V9m16 14V9"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            title
          </span>
          <p
            class="c7"
          >
            <span
              class="c8"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification should render custom template inside notification 1`] = `
.c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is unknown"
            class="c4"
            viewBox="0 0 12 12"
          >
            <rect
              fill-rule="evenodd"
              height="10"
              rx="1"
              stroke="#000"
              width="10"
              x="1"
              y="1"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            Test title
          </span>
          <span
            class="c7"
          >
            A sample text message
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification should render outside grommet wrapper 1`] = `
<DocumentFragment>
  .c3 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #919191;
  stroke: #919191;
}

.c3 g {
  fill: inherit;
  stroke: inherit;
}

.c3 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c3 *[stroke*='#'],
.c3 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c3 *[fill-rule],
.c3 *[FILL-RULE],
.c3 *[fill*='#'],
.c3 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c7 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c0 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-right: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-label="Status is unknown"
          class="c3"
          viewBox="0 0 12 12"
        >
          <rect
            fill-rule="evenodd"
            height="10"
            rx="1"
            stroke="#000"
            width="10"
            x="1"
            y="1"
          />
        </svg>
      </div>
      <div
        class="c4"
      >
        <span
          class="c5"
        >
          title
        </span>
        <p
          class="c6"
        >
          <span
            class="c7"
          >
            message
          </span>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification should render status and kind specific message and title colors 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #009E67;
  stroke: #009E67;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 158, 103, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 158, 103, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 0px;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  color: red;
  font-weight: bold;
}

.c8 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  font-size: 18px;
  line-height: 24px;
}

.c12 {
  font-size: 18px;
  line-height: 24px;
  color: green;
  font-weight: bold;
}

.c13 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  color: purple;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
  color: blue;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c9 {
    border-radius: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is okay"
            class="c4"
            viewBox="0 0 12 12"
          >
            <circle
              cx="6"
              cy="6"
              fill-rule="evenodd"
              r="5"
              stroke="#000"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            Status Title
          </span>
          <p
            class="c7"
          >
            <span
              class="c8"
            >
              This is an example of message text
            </span>
          </p>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is okay"
            class="c4"
            viewBox="0 0 12 12"
          >
            <circle
              cx="6"
              cy="6"
              fill-rule="evenodd"
              r="5"
              stroke="#000"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c11"
          >
            <span
              class="c12"
            >
              Status Title
            </span>
             
            <span
              class="c13"
            >
              <span
                class="c8"
              >
                This is an example of message text
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification should render the default icon if no icon is passed 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: blue;
  stroke: blue;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(145, 145, 145, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 6px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 12px;
  padding-right: 12px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c7 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
  max-width: 432px;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 6px;
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
      data-testid="test"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Home"
            class="c4"
            viewBox="0 0 24 24"
          >
            <path
              d="m1 11 11-9 11 9m-8 12v-8H9v8m-5 0V9m16 14V9"
              fill="none"
              stroke="#000"
              stroke-width="2"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            Test title
          </span>
          <p
            class="c7"
          >
            <span
              class="c8"
            >
              message
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification status 1`] = `
<DocumentFragment>
  .c4 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #009E67;
  stroke: #009E67;
}

.c4 g {
  fill: inherit;
  stroke: inherit;
}

.c4 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c4 *[stroke*='#'],
.c4 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c4 *[fill-rule],
.c4 *[FILL-RULE],
.c4 *[fill*='#'],
.c4 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c11 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #C27B00;
  stroke: #C27B00;
}

.c11 g {
  fill: inherit;
  stroke: inherit;
}

.c11 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c11 *[stroke*='#'],
.c11 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c11 *[fill-rule],
.c11 *[FILL-RULE],
.c11 *[fill*='#'],
.c11 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c13 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #EB0000;
  stroke: #EB0000;
}

.c13 g {
  fill: inherit;
  stroke: inherit;
}

.c13 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c13 *[stroke*='#'],
.c13 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c13 *[fill-rule],
.c13 *[FILL-RULE],
.c13 *[fill*='#'],
.c13 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(0, 158, 103, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 0px;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  flex: 1 1;
  padding-left: 48px;
  padding-right: 48px;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
  padding-right: 12px;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(194, 123, 0, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 0px;
}

.c12 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: rgba(235, 0, 0, 0.1);
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  border-radius: 0px;
}

.c6 {
  font-size: 18px;
  line-height: 24px;
}

.c7 {
  font-size: 18px;
  line-height: 24px;
  font-weight: bold;
}

.c8 {
  margin: 0px;
  font-size: 18px;
  line-height: 24px;
}

.c9 {
  margin-right: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-radius: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    padding-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    border-radius: 0px;
  }
}

@media only screen and (max-width: 768px) {
  .c12 {
    border-radius: 0px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is okay"
            class="c4"
            viewBox="0 0 12 12"
          >
            <circle
              cx="6"
              cy="6"
              fill-rule="evenodd"
              r="5"
              stroke="#000"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            <span
              class="c7"
            >
              title
            </span>
             
            <span
              class="c8"
            >
              <span
                class="c9"
              >
                message
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c10"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is warning"
            class="c11"
            viewBox="0 0 12 12"
          >
            <path
              d="m6 1 5 9H1z"
              fill-rule="evenodd"
              stroke="#000"
              stroke-linejoin="round"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            <span
              class="c7"
            >
              title
            </span>
             
            <span
              class="c8"
            >
              <span
                class="c9"
              >
                message
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <svg
            aria-label="Status is critical"
            class="c13"
            viewBox="0 0 12 12"
          >
            <path
              d="M6.712 1.263a1.005 1.005 0 0 0-1.424 0L1.263 5.288a1.005 1.005 0 0 0 0 1.424l4.025 4.025a1.005 1.005 0 0 0 1.424 0l4.025-4.025a1.005 1.005 0 0 0 0-1.424L6.712 1.263z"
              fill-rule="evenodd"
              stroke="#000"
            />
          </svg>
        </div>
        <div
          class="c5"
        >
          <span
            class="c6"
          >
            <span
              class="c7"
            >
              title
            </span>
             
            <span
              class="c8"
            >
              <span
                class="c9"
              >
                message
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
